Proyecto_MONDRIAN/Proyecto_MONDRIAN/proyecto_mondrian.output
Terminales no usados en la gramática

    MENOS


Gramática

    0 $accept: all $end

    1 all: saltoOpcional zona_variables zona_recuadros zona_lineas inic_creacion_cuadros_nombre

    2 zona_variables: ε
    3               | VARIABLES salto inic_definicion

    4 inic_definicion: ε
    5                | inic_definicion definicion

    6 $@1: ε

    7 definicion: TIPO IDENTIFICADORMINUSCULA ASIGNACION expr PUNTOYCOMA $@1 saltoOpcional

    8 $@2: ε

    9 definicion: TIPO IDENTIFICADORMINUSCULA ASIGNACION logica PUNTOYCOMA $@2 saltoOpcional

   10 $@3: ε

   11 definicion: TIPO secuencia_de_Identificadores PUNTOYCOMA $@3 saltoOpcional

   12 $@4: ε

   13 definicion: IDENTIFICADORMINUSCULA ASIGNACION expr PUNTOYCOMA $@4 saltoOpcional

   14 $@5: ε

   15 definicion: IDENTIFICADORMINUSCULA ASIGNACION logica PUNTOYCOMA $@5 saltoOpcional
   16           | error

   17 secuencia_de_Identificadores: IDENTIFICADORMINUSCULA
   18                             | IDENTIFICADORMINUSCULA COMA secuencia_de_Identificadores

   19 $@6: ε

   20 zona_recuadros: RECUADROS $@6 salto inic_definicion_recuadro

   21 inic_definicion_recuadro: ε
   22                         | inic_definicion_recuadro definicion_recuadro

   23 $@7: ε

   24 definicion_recuadro: IDENTIFICADORMAYUSCULA IGUAL '<' expr COMA expr COMA COLOR '>' $@7 salto
   25                    | error

   26 zona_lineas: LINEAS salto inic_definicion_linea

   27 inic_definicion_linea: ε
   28                      | inic_definicion_linea definicion_linea

   29 definicion_linea: IDENTIFICADORMAYUSCULA IGUAL '<' expr COMA ORIENTACION COMA COLOR '>' salto
   30                 | error

   31 inic_creacion_cuadros_nombre: ε
   32                             | inic_creacion_cuadros_nombre creacion_cuadros_nombre

   33 $@8: ε

   34 creacion_cuadros_nombre: CUADRO CADENA $@8 ':' salto inic_acciones_cuadros FINCUADRO saltoOpcional

   35 inic_acciones_cuadros: ε
   36                      | acciones_cuadros inic_acciones_cuadros

   37 $@9: ε

   38 acciones_cuadros: PINTAR '(' IDENTIFICADORMAYUSCULA COMA expr COMA expr ')' $@9 salto

   39 $@10: ε

   40 acciones_cuadros: PINTAR '(' IDENTIFICADORMAYUSCULA COMA expr ')' $@10 salto

   41 $@11: ε

   42 acciones_cuadros: PAUSA '(' expr ')' $@11 salto

   43 $@12: ε

   44 acciones_cuadros: IDENTIFICADORMINUSCULA ASIGNACION expr $@12 salto

   45 $@13: ε

   46 acciones_cuadros: IDENTIFICADORMINUSCULA ASIGNACION logica $@13 saltoOpcional

   47 $@14: ε

   48 acciones_cuadros: MENSAJE '(' CADENA ')' $@14 salto
   49                 | condicional
   50                 | error

   51 condicional: parteSi parteSiNo

   52 $@15: ε

   53 parteSi: SI '(' logica ')' $@15 bloque

   54 parteSiNo: ε

   55 $@16: ε

   56 parteSiNo: SINO $@16 bloque

   57 bloque: '{' salto inic_acciones_cuadros '}' saltoOpcional

   58 salto: SALTOLINEA
   59      | SALTOLINEA salto

   60 saltoOpcional: ε
   61              | salto

   62 expr: ENTERO
   63     | REAL
   64     | IDENTIFICADORMINUSCULA
   65     | expr '+' expr
   66     | expr '-' expr
   67     | expr '*' expr
   68     | expr '/' expr
   69     | expr DIV expr
   70     | expr '%' expr
   71     | '-' expr
   72     | '(' expr ')'

   73 logica: BOOL
   74       | logica AND logica
   75       | logica OR logica
   76       | NOT logica
   77       | expr DISTINTO expr
   78       | logica DISTINTO logica
   79       | expr IGUAL expr
   80       | logica IGUAL logica
   81       | expr MENORIGUAL expr
   82       | expr '>' expr
   83       | expr MAYORIGUAL expr
   84       | expr '<' expr
   85       | '(' logica ')'


Terminales con las reglas donde aparecen

    $end (0) 0
    '%' (37) 70
    '(' (40) 38 40 42 48 53 72 85
    ')' (41) 38 40 42 48 53 72 85
    '*' (42) 67
    '+' (43) 65
    '-' (45) 66 71
    '/' (47) 68
    ':' (58) 34
    '<' (60) 24 29 84
    '>' (62) 24 29 82
    '{' (123) 57
    '}' (125) 57
    error (256) 16 25 30 50
    PINTAR (258) 38 40
    MENSAJE (259) 48
    PAUSA (260) 42
    ASIGNACION (261) 7 9 13 15 44 46
    IGUAL (262) 24 29 79 80
    VARIABLES (263) 3
    RECUADROS (264) 20
    LINEAS (265) 26
    DIV (266) 69
    MENOS (267)
    SALTOLINEA (268) 58 59
    PUNTOYCOMA (269) 7 9 11 13 15
    COMA (270) 18 24 29 38 40
    CUADRO (271) 34
    FINCUADRO (272) 34
    SI (273) 53
    SINO (274) 56
    IDENTIFICADORMINUSCULA <var> (275) 7 9 13 15 17 18 44 46 64
    IDENTIFICADORMAYUSCULA <var> (276) 24 29 38 40
    TIPO <var> (277) 7 9 11
    COLOR <var> (278) 24 29
    ORIENTACION <var> (279) 29
    CADENA <text> (280) 34 48
    ENTERO <c_entero> (281) 62
    REAL <c_real> (282) 63
    BOOL <c_bool> (283) 73
    OR (284) 75
    AND (285) 74
    DISTINTO (286) 77 78
    MENORIGUAL (287) 81
    MAYORIGUAL (288) 83
    menos (289)
    NOT (290) 76
    si_simple (291)


No terminales con las reglas donde aparecen

    $accept (49)
        on left: 0
    all (50)
        on left: 1
        on right: 0
    zona_variables (51)
        on left: 2 3
        on right: 1
    inic_definicion (52)
        on left: 4 5
        on right: 3 5
    definicion (53)
        on left: 7 9 11 13 15 16
        on right: 5
    $@1 (54)
        on left: 6
        on right: 7
    $@2 (55)
        on left: 8
        on right: 9
    $@3 (56)
        on left: 10
        on right: 11
    $@4 (57)
        on left: 12
        on right: 13
    $@5 (58)
        on left: 14
        on right: 15
    secuencia_de_Identificadores (59)
        on left: 17 18
        on right: 11 18
    zona_recuadros (60)
        on left: 20
        on right: 1
    $@6 (61)
        on left: 19
        on right: 20
    inic_definicion_recuadro (62)
        on left: 21 22
        on right: 20 22
    definicion_recuadro (63)
        on left: 24 25
        on right: 22
    $@7 (64)
        on left: 23
        on right: 24
    zona_lineas (65)
        on left: 26
        on right: 1
    inic_definicion_linea (66)
        on left: 27 28
        on right: 26 28
    definicion_linea (67)
        on left: 29 30
        on right: 28
    inic_creacion_cuadros_nombre (68)
        on left: 31 32
        on right: 1 32
    creacion_cuadros_nombre (69)
        on left: 34
        on right: 32
    $@8 (70)
        on left: 33
        on right: 34
    inic_acciones_cuadros (71)
        on left: 35 36
        on right: 34 36 57
    acciones_cuadros (72)
        on left: 38 40 42 44 46 48 49 50
        on right: 36
    $@9 (73)
        on left: 37
        on right: 38
    $@10 (74)
        on left: 39
        on right: 40
    $@11 (75)
        on left: 41
        on right: 42
    $@12 (76)
        on left: 43
        on right: 44
    $@13 (77)
        on left: 45
        on right: 46
    $@14 (78)
        on left: 47
        on right: 48
    condicional (79)
        on left: 51
        on right: 49
    parteSi (80)
        on left: 53
        on right: 51
    $@15 (81)
        on left: 52
        on right: 53
    parteSiNo (82)
        on left: 54 56
        on right: 51
    $@16 (83)
        on left: 55
        on right: 56
    bloque (84)
        on left: 57
        on right: 53 56
    salto (85)
        on left: 58 59
        on right: 3 20 24 26 29 34 38 40 42 44 48 57 59 61
    saltoOpcional (86)
        on left: 60 61
        on right: 1 7 9 11 13 15 34 46 57
    expr <c_expresion> (87)
        on left: 62 63 64 65 66 67 68 69 70 71 72
        on right: 7 13 24 29 38 40 42 44 65 66 67 68 69 70 71 72 77 79 81 82 83 84
    logica <c_bool> (88)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 9 15 46 53 74 75 76 78 80 85


Estado 0

    0 $accept: • all $end

    SALTOLINEA  desplazar e ir al estado 1

    $default  reduce usando la regla 60 (saltoOpcional)

    all            ir al estado 2
    salto          ir al estado 3
    saltoOpcional  ir al estado 4


Estado 1

   58 salto: SALTOLINEA •
   59      | SALTOLINEA • salto

    SALTOLINEA  desplazar e ir al estado 1

    $default  reduce usando la regla 58 (salto)

    salto  ir al estado 5


Estado 2

    0 $accept: all • $end

    $end  desplazar e ir al estado 6


Estado 3

   61 saltoOpcional: salto •

    $default  reduce usando la regla 61 (saltoOpcional)


Estado 4

    1 all: saltoOpcional • zona_variables zona_recuadros zona_lineas inic_creacion_cuadros_nombre

    VARIABLES  desplazar e ir al estado 7

    $default  reduce usando la regla 2 (zona_variables)

    zona_variables  ir al estado 8


Estado 5

   59 salto: SALTOLINEA salto •

    $default  reduce usando la regla 59 (salto)


Estado 6

    0 $accept: all $end •

    $default  aceptar


Estado 7

    3 zona_variables: VARIABLES • salto inic_definicion

    SALTOLINEA  desplazar e ir al estado 1

    salto  ir al estado 9


Estado 8

    1 all: saltoOpcional zona_variables • zona_recuadros zona_lineas inic_creacion_cuadros_nombre

    RECUADROS  desplazar e ir al estado 10

    zona_recuadros  ir al estado 11


Estado 9

    3 zona_variables: VARIABLES salto • inic_definicion

    $default  reduce usando la regla 4 (inic_definicion)

    inic_definicion  ir al estado 12


Estado 10

   20 zona_recuadros: RECUADROS • $@6 salto inic_definicion_recuadro

    $default  reduce usando la regla 19 ($@6)

    $@6  ir al estado 13


Estado 11

    1 all: saltoOpcional zona_variables zona_recuadros • zona_lineas inic_creacion_cuadros_nombre

    LINEAS  desplazar e ir al estado 14

    zona_lineas  ir al estado 15


Estado 12

    3 zona_variables: VARIABLES salto inic_definicion •
    5 inic_definicion: inic_definicion • definicion

    error                   desplazar e ir al estado 16
    IDENTIFICADORMINUSCULA  desplazar e ir al estado 17
    TIPO                    desplazar e ir al estado 18

    RECUADROS  reduce usando la regla 3 (zona_variables)

    definicion  ir al estado 19


Estado 13

   20 zona_recuadros: RECUADROS $@6 • salto inic_definicion_recuadro

    SALTOLINEA  desplazar e ir al estado 1

    salto  ir al estado 20


Estado 14

   26 zona_lineas: LINEAS • salto inic_definicion_linea

    SALTOLINEA  desplazar e ir al estado 1

    salto  ir al estado 21


Estado 15

    1 all: saltoOpcional zona_variables zona_recuadros zona_lineas • inic_creacion_cuadros_nombre

    $default  reduce usando la regla 31 (inic_creacion_cuadros_nombre)

    inic_creacion_cuadros_nombre  ir al estado 22


Estado 16

   16 definicion: error •

    $default  reduce usando la regla 16 (definicion)


Estado 17

   13 definicion: IDENTIFICADORMINUSCULA • ASIGNACION expr PUNTOYCOMA $@4 saltoOpcional
   15           | IDENTIFICADORMINUSCULA • ASIGNACION logica PUNTOYCOMA $@5 saltoOpcional

    ASIGNACION  desplazar e ir al estado 23


Estado 18

    7 definicion: TIPO • IDENTIFICADORMINUSCULA ASIGNACION expr PUNTOYCOMA $@1 saltoOpcional
    9           | TIPO • IDENTIFICADORMINUSCULA ASIGNACION logica PUNTOYCOMA $@2 saltoOpcional
   11           | TIPO • secuencia_de_Identificadores PUNTOYCOMA $@3 saltoOpcional

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 24

    secuencia_de_Identificadores  ir al estado 25


Estado 19

    5 inic_definicion: inic_definicion definicion •

    $default  reduce usando la regla 5 (inic_definicion)


Estado 20

   20 zona_recuadros: RECUADROS $@6 salto • inic_definicion_recuadro

    $default  reduce usando la regla 21 (inic_definicion_recuadro)

    inic_definicion_recuadro  ir al estado 26


Estado 21

   26 zona_lineas: LINEAS salto • inic_definicion_linea

    $default  reduce usando la regla 27 (inic_definicion_linea)

    inic_definicion_linea  ir al estado 27


Estado 22

    1 all: saltoOpcional zona_variables zona_recuadros zona_lineas inic_creacion_cuadros_nombre •
   32 inic_creacion_cuadros_nombre: inic_creacion_cuadros_nombre • creacion_cuadros_nombre

    CUADRO  desplazar e ir al estado 28

    $default  reduce usando la regla 1 (all)

    creacion_cuadros_nombre  ir al estado 29


Estado 23

   13 definicion: IDENTIFICADORMINUSCULA ASIGNACION • expr PUNTOYCOMA $@4 saltoOpcional
   15           | IDENTIFICADORMINUSCULA ASIGNACION • logica PUNTOYCOMA $@5 saltoOpcional

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    BOOL                    desplazar e ir al estado 33
    '-'                     desplazar e ir al estado 34
    NOT                     desplazar e ir al estado 35
    '('                     desplazar e ir al estado 36

    expr    ir al estado 37
    logica  ir al estado 38


Estado 24

    7 definicion: TIPO IDENTIFICADORMINUSCULA • ASIGNACION expr PUNTOYCOMA $@1 saltoOpcional
    9           | TIPO IDENTIFICADORMINUSCULA • ASIGNACION logica PUNTOYCOMA $@2 saltoOpcional
   17 secuencia_de_Identificadores: IDENTIFICADORMINUSCULA •
   18                             | IDENTIFICADORMINUSCULA • COMA secuencia_de_Identificadores

    ASIGNACION  desplazar e ir al estado 39
    COMA        desplazar e ir al estado 40

    $default  reduce usando la regla 17 (secuencia_de_Identificadores)


Estado 25

   11 definicion: TIPO secuencia_de_Identificadores • PUNTOYCOMA $@3 saltoOpcional

    PUNTOYCOMA  desplazar e ir al estado 41


Estado 26

   20 zona_recuadros: RECUADROS $@6 salto inic_definicion_recuadro •
   22 inic_definicion_recuadro: inic_definicion_recuadro • definicion_recuadro

    error                   desplazar e ir al estado 42
    IDENTIFICADORMAYUSCULA  desplazar e ir al estado 43

    LINEAS  reduce usando la regla 20 (zona_recuadros)

    definicion_recuadro  ir al estado 44


Estado 27

   26 zona_lineas: LINEAS salto inic_definicion_linea •
   28 inic_definicion_linea: inic_definicion_linea • definicion_linea

    error                   desplazar e ir al estado 45
    IDENTIFICADORMAYUSCULA  desplazar e ir al estado 46

    $end    reduce usando la regla 26 (zona_lineas)
    CUADRO  reduce usando la regla 26 (zona_lineas)

    definicion_linea  ir al estado 47


Estado 28

   34 creacion_cuadros_nombre: CUADRO • CADENA $@8 ':' salto inic_acciones_cuadros FINCUADRO saltoOpcional

    CADENA  desplazar e ir al estado 48


Estado 29

   32 inic_creacion_cuadros_nombre: inic_creacion_cuadros_nombre creacion_cuadros_nombre •

    $default  reduce usando la regla 32 (inic_creacion_cuadros_nombre)


Estado 30

   64 expr: IDENTIFICADORMINUSCULA •

    $default  reduce usando la regla 64 (expr)


Estado 31

   62 expr: ENTERO •

    $default  reduce usando la regla 62 (expr)


Estado 32

   63 expr: REAL •

    $default  reduce usando la regla 63 (expr)


Estado 33

   73 logica: BOOL •

    $default  reduce usando la regla 73 (logica)


Estado 34

   71 expr: '-' • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 50


Estado 35

   76 logica: NOT • logica

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    BOOL                    desplazar e ir al estado 33
    '-'                     desplazar e ir al estado 34
    NOT                     desplazar e ir al estado 35
    '('                     desplazar e ir al estado 36

    expr    ir al estado 51
    logica  ir al estado 52


Estado 36

   72 expr: '(' • expr ')'
   85 logica: '(' • logica ')'

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    BOOL                    desplazar e ir al estado 33
    '-'                     desplazar e ir al estado 34
    NOT                     desplazar e ir al estado 35
    '('                     desplazar e ir al estado 36

    expr    ir al estado 53
    logica  ir al estado 54


Estado 37

   13 definicion: IDENTIFICADORMINUSCULA ASIGNACION expr • PUNTOYCOMA $@4 saltoOpcional
   65 expr: expr • '+' expr
   66     | expr • '-' expr
   67     | expr • '*' expr
   68     | expr • '/' expr
   69     | expr • DIV expr
   70     | expr • '%' expr
   77 logica: expr • DISTINTO expr
   79       | expr • IGUAL expr
   81       | expr • MENORIGUAL expr
   82       | expr • '>' expr
   83       | expr • MAYORIGUAL expr
   84       | expr • '<' expr

    IGUAL       desplazar e ir al estado 55
    DIV         desplazar e ir al estado 56
    PUNTOYCOMA  desplazar e ir al estado 57
    DISTINTO    desplazar e ir al estado 58
    MENORIGUAL  desplazar e ir al estado 59
    MAYORIGUAL  desplazar e ir al estado 60
    '+'         desplazar e ir al estado 61
    '-'         desplazar e ir al estado 62
    '*'         desplazar e ir al estado 63
    '/'         desplazar e ir al estado 64
    '%'         desplazar e ir al estado 65
    '<'         desplazar e ir al estado 66
    '>'         desplazar e ir al estado 67


Estado 38

   15 definicion: IDENTIFICADORMINUSCULA ASIGNACION logica • PUNTOYCOMA $@5 saltoOpcional
   74 logica: logica • AND logica
   75       | logica • OR logica
   78       | logica • DISTINTO logica
   80       | logica • IGUAL logica

    IGUAL       desplazar e ir al estado 68
    PUNTOYCOMA  desplazar e ir al estado 69
    OR          desplazar e ir al estado 70
    AND         desplazar e ir al estado 71
    DISTINTO    desplazar e ir al estado 72


Estado 39

    7 definicion: TIPO IDENTIFICADORMINUSCULA ASIGNACION • expr PUNTOYCOMA $@1 saltoOpcional
    9           | TIPO IDENTIFICADORMINUSCULA ASIGNACION • logica PUNTOYCOMA $@2 saltoOpcional

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    BOOL                    desplazar e ir al estado 33
    '-'                     desplazar e ir al estado 34
    NOT                     desplazar e ir al estado 35
    '('                     desplazar e ir al estado 36

    expr    ir al estado 73
    logica  ir al estado 74


Estado 40

   18 secuencia_de_Identificadores: IDENTIFICADORMINUSCULA COMA • secuencia_de_Identificadores

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 75

    secuencia_de_Identificadores  ir al estado 76


Estado 41

   11 definicion: TIPO secuencia_de_Identificadores PUNTOYCOMA • $@3 saltoOpcional

    $default  reduce usando la regla 10 ($@3)

    $@3  ir al estado 77


Estado 42

   25 definicion_recuadro: error •

    $default  reduce usando la regla 25 (definicion_recuadro)


Estado 43

   24 definicion_recuadro: IDENTIFICADORMAYUSCULA • IGUAL '<' expr COMA expr COMA COLOR '>' $@7 salto

    IGUAL  desplazar e ir al estado 78


Estado 44

   22 inic_definicion_recuadro: inic_definicion_recuadro definicion_recuadro •

    $default  reduce usando la regla 22 (inic_definicion_recuadro)


Estado 45

   30 definicion_linea: error •

    $default  reduce usando la regla 30 (definicion_linea)


Estado 46

   29 definicion_linea: IDENTIFICADORMAYUSCULA • IGUAL '<' expr COMA ORIENTACION COMA COLOR '>' salto

    IGUAL  desplazar e ir al estado 79


Estado 47

   28 inic_definicion_linea: inic_definicion_linea definicion_linea •

    $default  reduce usando la regla 28 (inic_definicion_linea)


Estado 48

   34 creacion_cuadros_nombre: CUADRO CADENA • $@8 ':' salto inic_acciones_cuadros FINCUADRO saltoOpcional

    $default  reduce usando la regla 33 ($@8)

    $@8  ir al estado 80


Estado 49

   72 expr: '(' • expr ')'

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 81


Estado 50

   65 expr: expr • '+' expr
   66     | expr • '-' expr
   67     | expr • '*' expr
   68     | expr • '/' expr
   69     | expr • DIV expr
   70     | expr • '%' expr
   71     | '-' expr •

    $default  reduce usando la regla 71 (expr)


Estado 51

   65 expr: expr • '+' expr
   66     | expr • '-' expr
   67     | expr • '*' expr
   68     | expr • '/' expr
   69     | expr • DIV expr
   70     | expr • '%' expr
   77 logica: expr • DISTINTO expr
   79       | expr • IGUAL expr
   81       | expr • MENORIGUAL expr
   82       | expr • '>' expr
   83       | expr • MAYORIGUAL expr
   84       | expr • '<' expr

    IGUAL       desplazar e ir al estado 55
    DIV         desplazar e ir al estado 56
    DISTINTO    desplazar e ir al estado 58
    MENORIGUAL  desplazar e ir al estado 59
    MAYORIGUAL  desplazar e ir al estado 60
    '+'         desplazar e ir al estado 61
    '-'         desplazar e ir al estado 62
    '*'         desplazar e ir al estado 63
    '/'         desplazar e ir al estado 64
    '%'         desplazar e ir al estado 65
    '<'         desplazar e ir al estado 66
    '>'         desplazar e ir al estado 67


Estado 52

   74 logica: logica • AND logica
   75       | logica • OR logica
   76       | NOT logica •
   78       | logica • DISTINTO logica
   80       | logica • IGUAL logica

    $default  reduce usando la regla 76 (logica)


Estado 53

   65 expr: expr • '+' expr
   66     | expr • '-' expr
   67     | expr • '*' expr
   68     | expr • '/' expr
   69     | expr • DIV expr
   70     | expr • '%' expr
   72     | '(' expr • ')'
   77 logica: expr • DISTINTO expr
   79       | expr • IGUAL expr
   81       | expr • MENORIGUAL expr
   82       | expr • '>' expr
   83       | expr • MAYORIGUAL expr
   84       | expr • '<' expr

    IGUAL       desplazar e ir al estado 55
    DIV         desplazar e ir al estado 56
    DISTINTO    desplazar e ir al estado 58
    MENORIGUAL  desplazar e ir al estado 59
    MAYORIGUAL  desplazar e ir al estado 60
    '+'         desplazar e ir al estado 61
    '-'         desplazar e ir al estado 62
    '*'         desplazar e ir al estado 63
    '/'         desplazar e ir al estado 64
    '%'         desplazar e ir al estado 65
    '<'         desplazar e ir al estado 66
    '>'         desplazar e ir al estado 67
    ')'         desplazar e ir al estado 82


Estado 54

   74 logica: logica • AND logica
   75       | logica • OR logica
   78       | logica • DISTINTO logica
   80       | logica • IGUAL logica
   85       | '(' logica • ')'

    IGUAL     desplazar e ir al estado 68
    OR        desplazar e ir al estado 70
    AND       desplazar e ir al estado 71
    DISTINTO  desplazar e ir al estado 72
    ')'       desplazar e ir al estado 83


Estado 55

   79 logica: expr IGUAL • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 84


Estado 56

   69 expr: expr DIV • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 85


Estado 57

   13 definicion: IDENTIFICADORMINUSCULA ASIGNACION expr PUNTOYCOMA • $@4 saltoOpcional

    $default  reduce usando la regla 12 ($@4)

    $@4  ir al estado 86


Estado 58

   77 logica: expr DISTINTO • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 87


Estado 59

   81 logica: expr MENORIGUAL • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 88


Estado 60

   83 logica: expr MAYORIGUAL • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 89


Estado 61

   65 expr: expr '+' • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 90


Estado 62

   66 expr: expr '-' • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 91


Estado 63

   67 expr: expr '*' • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 92


Estado 64

   68 expr: expr '/' • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 93


Estado 65

   70 expr: expr '%' • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 94


Estado 66

   84 logica: expr '<' • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 95


Estado 67

   82 logica: expr '>' • expr

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    '-'                     desplazar e ir al estado 34
    '('                     desplazar e ir al estado 49

    expr  ir al estado 96


Estado 68

   80 logica: logica IGUAL • logica

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    BOOL                    desplazar e ir al estado 33
    '-'                     desplazar e ir al estado 34
    NOT                     desplazar e ir al estado 35
    '('                     desplazar e ir al estado 36

    expr    ir al estado 51
    logica  ir al estado 97


Estado 69

   15 definicion: IDENTIFICADORMINUSCULA ASIGNACION logica PUNTOYCOMA • $@5 saltoOpcional

    $default  reduce usando la regla 14 ($@5)

    $@5  ir al estado 98


Estado 70

   75 logica: logica OR • logica

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    BOOL                    desplazar e ir al estado 33
    '-'                     desplazar e ir al estado 34
    NOT                     desplazar e ir al estado 35
    '('                     desplazar e ir al estado 36

    expr    ir al estado 51
    logica  ir al estado 99


Estado 71

   74 logica: logica AND • logica

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    BOOL                    desplazar e ir al estado 33
    '-'                     desplazar e ir al estado 34
    NOT                     desplazar e ir al estado 35
    '('                     desplazar e ir al estado 36

    expr    ir al estado 51
    logica  ir al estado 100


Estado 72

   78 logica: logica DISTINTO • logica

    IDENTIFICADORMINUSCULA  desplazar e ir al estado 30
    ENTERO                  desplazar e ir al estado 31
    REAL                    desplazar e ir al estado 32
    BOOL                    desplazar e ir al estado 33
    '-'                     desplazar e ir al estado 34
    NOT                     desplazar e ir al estado 35
    '('                     desplazar e ir al estado 36

    expr    ir al estado 51
    logica  ir al estado 101


Estado 73

    7 definicion: TIPO IDENTIFICADORMINUSCULA ASIGNACION expr • PUNTOYCOMA $@1 saltoOpcional
   65 expr: expr • '+' expr
   66     | expr • '-' expr
   67     | expr • '*' expr
   68     | expr • '/' expr
   69     | expr • DIV expr
   70     | expr • '%' expr
   77 logica: expr • DISTINTO expr
   79       | expr • IGUAL expr
   81       | expr • MENORIGUAL expr
   82       | expr • '>' expr
   83       | expr • MAYORIGUAL expr
   84       | expr • '<' expr

    IGUAL       desplazar e ir al estado 55
    DIV         desplazar e ir al estado 56
    PUNTOYCOMA  desplazar e ir al estado 102
    DISTINTO    desplazar e ir al estado 58
    MENORIGUAL  desplazar e ir al estado 59
    MAYORIGUAL  desplazar e ir al estado 60
    '+'         desplazar e ir al estado 61
    '-'         desplazar e ir al estado 62
    '*'         desplazar e ir al estado 63
    '/'         desplazar e ir al estado 64
    '%'         desplazar e ir al estado 65
    '<'         desplazar e ir al estado 66
    '>'         desplazar e ir al estado 67


Estado 74

    9 definicion: TIPO IDENTIFICADORMINUSCULA ASIGNACION logica • PUNTOYCOMA $@2 saltoOpcional
   74 logica: logica • AND logica
   75       | logica • OR logica
   78       | logica • DISTINTO logica
   80       | logica • IGUAL logica

    IGUAL       desplazar e ir al estado 68
    PUNTOYCOMA  desplazar e ir al estado 103
    OR          desplazar e ir al estado 70
    AND         desplazar e ir al estado 71
    DISTINTO    desplazar e ir al estado 72


Estado 75

   17 secuencia_de_Identificadores: IDENTIFICADORMINUSCULA •
   18                             | IDENTIFICADORMINUSCULA • COMA secuencia_de_Identificadores

    COMA  desplazar e ir al estado 40

    $default  reduce usando la regla 17 (secuencia_de_Identificadores)


Estado 76

   18 secuencia_de_Identificadores: IDENTIFICADORMINUSCULA COMA secuencia_de_Identificadores •

    $default  reduce usando la regla 18 (secuencia_de_Identificadores)


Estado 77

   11 definicion: TIPO secuencia_de_Identificadores PUNTOYCOMA $@3 • saltoOpcional

    SALTOLINEA  desplazar e ir al estado 1

    $default  reduce usando la regla 60 (saltoOpcional)

    salto          ir al estado 3
    saltoOpcional  ir al estado 104

